--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Iure ullam adipisci 
+            deleniti inventore illum ipsa. Delectus dicta 
+            consequuntur iure 
+            accusamus id corporis odio 
+            nam reprehenderit facilis et. Cum, omnis qui?</p>
+    </div>
     
 </body>
 </html>
