added the second and third blog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
             accusamus id corporis odio 
             nam reprehenderit facilis et. Cum, omnis qui?</p>
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Iure ullam adipisci 
+            deleniti inventore illum ipsa. Delectus dicta 
+            consequuntur iure 
+            accusamus id corporis odio 
+            nam reprehenderit facilis et. Cum, omnis qui?</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Iure ullam adipisci 
+            deleniti inventore illum ipsa. Delectus dicta 
+            consequuntur iure 
+            accusamus id corporis odio 
+            nam reprehenderit facilis et. Cum, omnis qui?</p>
+    </div>
     
 </body>
 </html>
