added a list to push code

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             accusamus id corporis odio 
             nam reprehenderit facilis et. Cum, omnis qui?</p>
     </div>
+    <div>
+        <h2>How to push incremental code</h2>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message</li>
+            <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
